[gd_scene load_steps=4 format=3 uid="uid://cqe11k4jfase6"]

[ext_resource type="Script" path="res://interface/login_menu/login_menu.gd" id="1_sq15u"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xtc3q"]
noise_type = 3
seed = -3558
frequency = 0.032
fractal_type = 0
domain_warp_enabled = true
domain_warp_type = 2
domain_warp_amplitude = 64.611
domain_warp_fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dtwaj"]
noise = SubResource("FastNoiseLite_xtc3q")

[node name="CC" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_sq15u")

[node name="P" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="MC" type="MarginContainer" parent="P"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Login" type="VBoxContainer" parent="P/MC"]
layout_mode = 2

[node name="login_label" type="Label" parent="P/MC/Login"]
layout_mode = 2
text = "Login"

[node name="login_input" type="LineEdit" parent="P/MC/Login"]
unique_name_in_owner = true
layout_mode = 2
text = "belikov.id"
caret_blink = true
caret_blink_interval = 0.5

[node name="password_lable" type="Label" parent="P/MC/Login"]
layout_mode = 2
text = "Password"

[node name="password_input" type="LineEdit" parent="P/MC/Login"]
unique_name_in_owner = true
layout_mode = 2
text = "FAFtop_43"
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="capthca" type="VBoxContainer" parent="P/MC/Login"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="captcha_title" type="Label" parent="P/MC/Login/capthca"]
layout_mode = 2
text = "Insert text from image: "

[node name="C" type="Panel" parent="P/MC/Login/capthca"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="noise" type="TextureRect" parent="P/MC/Login/capthca/C"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_dtwaj")
expand_mode = 4

[node name="captcha_lable" type="Label" parent="P/MC/Login/capthca/C"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.458824)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "LlIi"
horizontal_alignment = 1
vertical_alignment = 1

[node name="captcha_input" type="LineEdit" parent="P/MC/Login/capthca"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="error_lable" type="Label" parent="P/MC/Login"]
visible = false
layout_mode = 2
text = "Error"
autowrap_mode = 3

[node name="HBC" type="HBoxContainer" parent="P/MC/Login"]
layout_mode = 2
alignment = 1

[node name="login" type="Button" parent="P/MC/Login/HBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Login"

[node name="register" type="Button" parent="P/MC/Login/HBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Register"

[node name="forget_pass" type="Button" parent="P/MC/Login"]
unique_name_in_owner = true
layout_mode = 2
text = "Forget password?"

[node name="Register" type="VBoxContainer" parent="P/MC"]
visible = false
layout_mode = 2

[node name="email_label" type="Label" parent="P/MC/Register"]
layout_mode = 2
text = "Email"

[node name="reg_email_input" type="LineEdit" parent="P/MC/Register"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="login_label" type="Label" parent="P/MC/Register"]
layout_mode = 2
text = "Nickname"

[node name="reg_login_input" type="LineEdit" parent="P/MC/Register"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="password_lable" type="Label" parent="P/MC/Register"]
layout_mode = 2
text = "Password"

[node name="reg_password_input" type="LineEdit" parent="P/MC/Register"]
unique_name_in_owner = true
layout_mode = 2
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="error_lable" type="Label" parent="P/MC/Register"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Error"
autowrap_mode = 3

[node name="create_account" type="Button" parent="P/MC/Register"]
layout_mode = 2
text = "Create account"

[node name="back" type="Button" parent="P/MC/Register"]
layout_mode = 2
text = "Back"

[node name="Secret" type="VBoxContainer" parent="P/MC"]
visible = false
layout_mode = 2

[node name="email_label" type="Label" parent="P/MC/Secret"]
layout_mode = 2
text = "Email"

[node name="email_input" type="LineEdit" parent="P/MC/Secret"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="send_code" type="Button" parent="P/MC/Secret"]
layout_mode = 2
text = "Send code"

[node name="code_lable" type="Label" parent="P/MC/Secret"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Code"

[node name="code_input" type="LineEdit" parent="P/MC/Secret"]
unique_name_in_owner = true
visible = false
layout_mode = 2
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="error_lable" type="Label" parent="P/MC/Secret"]
visible = false
layout_mode = 2
text = "Error"
autowrap_mode = 3

[node name="show_password" type="Button" parent="P/MC/Secret"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Show password"

[node name="back" type="Button" parent="P/MC/Secret"]
layout_mode = 2
text = "Back"

[node name="timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="P/MC/Login/HBC/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="P/MC/Login/HBC/register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="P/MC/Login/forget_pass" to="." method="_on_forget_pass_pressed"]
[connection signal="pressed" from="P/MC/Register/create_account" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="P/MC/Register/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="P/MC/Secret/send_code" to="." method="_on_send_code_pressed"]
[connection signal="pressed" from="P/MC/Secret/show_password" to="." method="_on_show_password_pressed"]
[connection signal="pressed" from="P/MC/Secret/back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
